// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render checkbox 1`] = `
.c0 {
  margin: 0 0 var(--gutter);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > label {
  margin: 0 0.5rem 0 0;
}

.c1 {
  display: block;
  font-size: 1.6rem;
  margin: 0 0 1rem;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="checkbox"
    >
      Checkbox
    </label>
    <input
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`<Checkbox /> should render checked checkbox 1`] = `
.c0 {
  margin: 0 0 var(--gutter);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > label {
  margin: 0 0.5rem 0 0;
}

.c1 {
  display: block;
  font-size: 1.6rem;
  margin: 0 0 1rem;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="checkbox"
    >
      Checkbox
    </label>
    <input
      checked=""
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
  </div>
</div>
`;
